--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.app{
+  height: 100vh;
+  display: grid;  
+  place-items: center;
+ 
 }
+.app > header{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 100%;
+  margin: auto;
+  margin-left: 0;
+  margin-bottom: 0;
+  box-shadow: 0 .75px  rgb(233, 233, 233);
+  position: sticky;
+  
+
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app>header>div{
+  float: left;
 }
+.app>header .menu{
+  float: right;
+  margin: 5px 10px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.app__body{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  min-height: 95vh;
+ 
+  width: 100vh;
+  margin-top: 0;
+  background-color:grey;
+  
 }
