--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+
 *{
   margin: 0;
+  
 
 }
 body {
@@ -11,9 +13,39 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: antiquewhite;
+  
+
+  
+ 
+ 
+  
+  
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+header{
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-left: 0;
+  margin-top: 0;
+  box-shadow: 0 .75px  rgb(233, 233, 233);
+  position:sticky;
+  
+
+}
+header>div{
+  padding: 5px 10px;
+}
+header .menu{
+  
+  padding: 5px 10px;
+
 }
